# Python

./: .gitignore  README.md  pyproject.toml
data/: resultado.csv  resultado.xlsx
notebook/: 01_basic_command.ipynb  02_visualizacao_dados.ipynb  03_vetores.ipynb  04_estatistica_aplicada.ipynb
